# anime-recommender

./: README.md  anime-recommender.cabal  database.sqlite3
src/: CLI.hs  Database.hs  InitializeDatabase.hs  main.hs
